// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Panel examples > Default responsive panel should render correctly 1`] = `
<div>
  <div
    class="v-flex"
  >
    <div
      class="v-panel v-ml-auto"
      style="min-inline-size: initial;"
    >
      <div
        class="v-surface v-panel-content"
      >
        <div
          class="v-panel-header v-flex v-flex-row v-gap-4 v-justify-content-between"
        >
          <h2
            class="v-typography-headline-3"
          >
            Panel title
          </h2>
          <button
            aria-label="Close panel"
            class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-3 -v-mr-8"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-close"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
        <div
          class="v-panel-body"
        >
          <h3
            class="v-typography-subtitle-2"
          >
            Panel subtitle
          </h3>
          <p>
            This is required text that can be used to describe the panel title and subtitle in more detail.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Panel examples > Modal expandable panel should render correctly 1`] = `
<div>
  <div
    class="v-flex"
  >
    <button
      aria-expanded="false"
      aria-label="Open panel"
      class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle v-ml-auto"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-media-rewind v-icon-rtl"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M7 8L13.6064 15L15 13.5244L9.78613 8L15 2.47559L13.6064 1L7 8Z"
        />
        <path
          class="v-icon-primary"
          d="M1 8L7.60645 15L9 13.5244L3.78613 8L9 2.47559L7.60645 1L1 8Z"
        />
      </svg>
    </button>
    <dialog
      class="v-panel v-panel-expandable v-ml-auto"
      style="height: 400px;"
    >
      <button
        aria-expanded="true"
        aria-label="Close panel"
        class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-fast-forward v-icon-rtl"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
          />
          <path
            class="v-icon-primary"
            d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
          />
        </svg>
      </button>
      <div
        class="v-surface v-panel-content"
      >
        <div
          class="v-panel-header"
        >
          <h2
            class="v-typography-headline-3"
          >
            Panel title
          </h2>
        </div>
        <div
          class="v-panel-body"
        >
          <h3
            class="v-typography-subtitle-2"
          >
            Panel subtitle
          </h3>
          <p>
            This is required text that can be used to describe the panel title and subtitle in more detail.
          </p>
        </div>
      </div>
    </dialog>
  </div>
</div>
`;

exports[`Panel examples > Modal expandable panel with secondary button should render correctly 1`] = `
<div>
  <div
    class="v-flex"
  >
    <button
      aria-expanded="false"
      aria-label="Open panel"
      class="v-button v-button-large v-button-secondary v-button-icon v-panel-toggle v-ml-auto"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-media-rewind v-icon-rtl"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M7 8L13.6064 15L15 13.5244L9.78613 8L15 2.47559L13.6064 1L7 8Z"
        />
        <path
          class="v-icon-primary"
          d="M1 8L7.60645 15L9 13.5244L3.78613 8L9 2.47559L7.60645 1L1 8Z"
        />
      </svg>
    </button>
    <dialog
      class="v-panel v-panel-expandable v-ml-auto"
      style="height: 400px;"
    >
      <button
        aria-expanded="true"
        aria-label="Close panel"
        class="v-button v-button-large v-button-secondary v-button-icon v-panel-toggle"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-fast-forward v-icon-rtl"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
          />
          <path
            class="v-icon-primary"
            d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
          />
        </svg>
      </button>
      <div
        class="v-surface v-panel-content"
      >
        <div
          class="v-panel-header"
        >
          <h2
            class="v-typography-headline-3"
          >
            Panel title
          </h2>
        </div>
        <div
          class="v-panel-body"
        >
          <h3
            class="v-typography-subtitle-2"
          >
            Panel subtitle
          </h3>
          <p>
            This is required text that can be used to describe the panel title and subtitle in more detail.
          </p>
        </div>
      </div>
    </dialog>
  </div>
</div>
`;

exports[`Panel examples > Modal expandable panel with skrim should render correctly 1`] = `
<div>
  <div
    class="v-flex"
  >
    <button
      aria-expanded="false"
      aria-label="Open panel"
      class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle v-ml-auto"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-media-rewind v-icon-rtl"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M7 8L13.6064 15L15 13.5244L9.78613 8L15 2.47559L13.6064 1L7 8Z"
        />
        <path
          class="v-icon-primary"
          d="M1 8L7.60645 15L9 13.5244L3.78613 8L9 2.47559L7.60645 1L1 8Z"
        />
      </svg>
    </button>
    <dialog
      class="v-panel v-panel-expandable v-panel-skrim v-ml-auto"
      style="height: 400px;"
    >
      <button
        aria-expanded="true"
        aria-label="Close panel"
        class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-fast-forward v-icon-rtl"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
          />
          <path
            class="v-icon-primary"
            d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
          />
        </svg>
      </button>
      <div
        class="v-surface v-panel-content"
      >
        <div
          class="v-panel-header"
        >
          <h2
            class="v-typography-headline-3"
          >
            Panel title
          </h2>
        </div>
        <div
          class="v-panel-body"
        >
          <h3
            class="v-typography-subtitle-2"
          >
            Panel subtitle
          </h3>
          <p>
            This is required text that can be used to describe the panel title and subtitle in more detail.
          </p>
        </div>
      </div>
    </dialog>
  </div>
</div>
`;

exports[`Panel examples > Modal panel should render correctly 1`] = `
<div>
  <button
    class="v-button"
  >
    Open modal panel
  </button>
  <dialog
    aria-describedby="modal-panel-default-description"
    aria-labelledby="modal-panel-default-title"
    aria-modal="true"
    class="v-panel"
    id="modal-panel-default"
  >
    <div
      class="v-surface v-panel-content"
    >
      <div
        class="v-panel-header v-flex v-flex-row v-gap-4 v-justify-content-between"
      >
        <h2
          class="v-typography-headline-3"
          id="modal-panel-default-title"
        >
          Panel title
        </h2>
        <button
          aria-label="Close panel"
          class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-3 -v-mr-8"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-close"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M15.3635 2.05078L9.41431 8.00098L15.3635 13.9502L13.9495 15.3643L8.00024 9.41504L2.05005 15.3643L0.635986 13.9502L6.58618 8.00098L0.635986 2.05078L2.05005 0.636719L8.00024 6.58691L13.9495 0.636719L15.3635 2.05078Z"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  transform="translate(0 0.000488281)"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
        </button>
      </div>
      <div
        class="v-panel-body"
      >
        <h3
          class="v-typography-subtitle-2"
          id="modal-panel-default-description"
        >
          Panel subtitle
        </h3>
        <p>
          This is required text that can be used to describe the panel title and subtitle in more detail.
        </p>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`Panel examples > Responsive expanded panel should render correctly 1`] = `
<div>
  <div
    class="v-flex"
    style="min-block-size: 200px;"
  >
    <button
      aria-expanded="true"
      aria-label="Close panel"
      class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle v-ml-auto"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-media-fast-forward v-icon-rtl"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
        />
        <path
          class="v-icon-primary"
          d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
        />
      </svg>
    </button>
    <div
      class="v-panel v-panel-expandable"
      style="min-inline-size: initial;"
    >
      <div
        class="v-surface v-panel-content"
      >
        <div
          class="v-panel-header"
        >
          <h2
            class="v-typography-headline-3"
          >
            Panel title
          </h2>
        </div>
        <div
          class="v-panel-body"
        >
          <h3
            class="v-typography-subtitle-2"
          >
            Panel subtitle
          </h3>
          <p>
            This is required text that can be used to describe the panel title and subtitle in more detail.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Panel examples > Tabbed modal expandable panel should render correctly 1`] = `
<div>
  <div
    class="v-flex"
  >
    <button
      aria-expanded="false"
      aria-label="Open panel"
      class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle v-ml-auto"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-media-rewind v-icon-rtl"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M7 8L13.6064 15L15 13.5244L9.78613 8L15 2.47559L13.6064 1L7 8Z"
        />
        <path
          class="v-icon-primary"
          d="M1 8L7.60645 15L9 13.5244L3.78613 8L9 2.47559L7.60645 1L1 8Z"
        />
      </svg>
    </button>
    <dialog
      class="v-panel v-panel-expandable v-ml-auto"
      style="height: 400px;"
    >
      <button
        aria-expanded="true"
        aria-label="Close panel"
        class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-media-fast-forward v-icon-rtl"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
          />
          <path
            class="v-icon-primary"
            d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
          />
        </svg>
      </button>
      <div
        class="v-surface v-panel-content"
      >
        <ul
          class="v-tabs v-tabs-horizontal v-panel-tabs"
          role="tablist"
        >
          <li
            class="v-tab"
            role="none"
          >
            <button
              aria-label="FAQ"
              aria-selected="true"
              class="v-button v-button-large v-button-tertiary"
              role="tab"
            >
              FAQ
            </button>
          </li>
          <li
            class="v-tab"
            role="none"
          >
            <button
              aria-label="Chat"
              aria-selected="false"
              class="v-button v-button-large v-button-tertiary"
              role="tab"
            >
              Chat
            </button>
          </li>
          <li
            class="v-tab"
            role="none"
          >
            <button
              aria-label="Contact"
              aria-selected="false"
              class="v-button v-button-large v-button-tertiary"
              role="tab"
            >
              Contact
            </button>
          </li>
        </ul>
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-panel-header"
        >
          <h2
            class="v-typography-headline-3"
          >
            Panel title
          </h2>
        </div>
        <div
          class="v-panel-body"
        >
          <h3
            class="v-typography-subtitle-2"
          >
            Panel subtitle
          </h3>
          <p>
            This is required text that can be used to describe the panel title and subtitle in more detail.
          </p>
        </div>
      </div>
    </dialog>
  </div>
</div>
`;

exports[`Panel examples > Tabbed responsive expanded panel should render correctly 1`] = `
<div>
  <div
    class="v-flex"
    style="min-block-size: 200px;"
  >
    <button
      aria-expanded="true"
      aria-label="Close panel"
      class="v-button v-button-large v-button-icon v-icon-two-color v-panel-toggle v-ml-auto"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-media-fast-forward v-icon-rtl"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M15 8L8.39355 15L7 13.5244L12.2139 8L7 2.47559L8.39355 1L15 8Z"
        />
        <path
          class="v-icon-primary"
          d="M9 8L2.39355 15L1 13.5244L6.21387 8L1 2.47559L2.39355 1L9 8Z"
        />
      </svg>
    </button>
    <div
      class="v-panel v-panel-expandable"
    >
      <div
        class="v-surface v-panel-content"
      >
        <ul
          class="v-tabs v-tabs-horizontal v-panel-tabs"
          role="tablist"
        >
          <li
            class="v-tab"
            role="none"
          >
            <button
              aria-label="FAQ"
              aria-selected="true"
              class="v-button v-button-large v-button-tertiary"
              role="tab"
            >
              FAQ
            </button>
          </li>
          <li
            class="v-tab"
            role="none"
          >
            <button
              aria-label="Chat"
              aria-selected="false"
              class="v-button v-button-large v-button-tertiary"
              role="tab"
            >
              Chat
            </button>
          </li>
          <li
            class="v-tab"
            role="none"
          >
            <button
              aria-label="Contact"
              aria-selected="false"
              class="v-button v-button-large v-button-tertiary"
              role="tab"
            >
              Contact
            </button>
          </li>
        </ul>
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <div
          class="v-panel-header"
        >
          <h2
            class="v-typography-headline-3"
          >
            Panel title
          </h2>
        </div>
        <div
          class="v-panel-body"
        >
          <h3
            class="v-typography-subtitle-2"
          >
            Panel subtitle
          </h3>
          <p>
            This is required text that can be used to describe the panel title and subtitle in more detail.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
